--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,5 +12,6 @@ body {
       margin: 0 10%;
       padding: 25px;
       border: 2px solid #dddddd;
+      background-color: #464646;
       flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
   }
