--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,6 @@ body {
       background-color: #464646;
       flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
   }
+  /* #available-to-attack-section .img, #characters-section .img,  { 
+      width: 100%;
+    } */
